fix overflow hidden

--- a/sass/_unittest.scss
+++ b/sass/_unittest.scss
@@ -90,13 +90,16 @@ table {
     margin-bottom: 11px;
   }
   .comment-respond {
-    margin-top: 94px;
+    margin-top: 78px;
     margin-bottom: 20px;
   }
   .latest-comments {
     .comment-respond {
       margin-bottom: 40px;
     }
+  }
+  .post-comments {
+    margin-top: 80px;
   }
 }
 
